--- a/packages/ranking-digital-rights/client/widget.html
+++ b/packages/ranking-digital-rights/client/widget.html
@@ -1,10 +1,10 @@
 <template name="RDRWidget">
 <h1>Corporate Accountability Index</h1>
-<h2>{{ category }}</h2>
+<h2>{{ sliceDescription }}</h2>
 <table class="table table-condensed">
   <thead>
     <tr>
-      <th><div class="service-header">Service</div><div class="company-header">Company</div></th>
+      <th><div class="service-header">{{ typeName }}</div><div class="company-header">{{ contextName }}</div></th>
       {{# each metrics }}
         <th class="small {{ classes }} {{ isSorted }}" title="{{ name }}">{{ name }}</th>
       {{/each}}
