--- a/packages/ranking-digital-rights/client/settings.html
+++ b/packages/ranking-digital-rights/client/settings.html
@@ -1,5 +1,6 @@
 <template name="RDRSettings">
 
+<div id="settings-section">
 
   <div class="form-group">
     <label for="granularity-select">Show</label>
@@ -11,7 +12,7 @@
   </div>
 
   
-  <div class="form-group">
+  <div class="form-group" id="category-form-group">
     <label for="category-select">Category</label>
     <select class="category form-control" id="category-select" name="category">
       {{# each categories }}
@@ -20,7 +21,7 @@
     </select>
   </div>
 
-  <div class="form-group">
+  <div class="form-group" id="company-form-group">
     <label for="company-select">Company</label>
     <select class="company form-control" id="company-select" name="company">
       {{# each companies }}
@@ -40,4 +41,6 @@
 
   <button class="btn btn-primary save-settings">Save</button>
 
+</div>
+  
 </template>
