Filter companies by type, not buy service categories

--- a/packages/ranking-digital-rights/client/widget.html
+++ b/packages/ranking-digital-rights/client/widget.html
@@ -4,7 +4,7 @@
 <table class="table table-condensed">
   <thead>
     <tr>
-      <th><div class="service-header">{{ typeName }}</div><div class="company-header">{{ contextName }}</div></th>
+      <th><div class="service-header">{{ granularityName }}</div><div class="company-header">{{ contextName }}</div></th>
       {{# each metrics }}
         <th class="small {{ classes }} {{ isSorted }}" title="{{ name }}">{{ name }}</th>
       {{/each}}
