--- a/packages/ranking-digital-rights/client/settings.html
+++ b/packages/ranking-digital-rights/client/settings.html
@@ -11,7 +11,6 @@
     </select>
   </div>
 
-  
   <div class="form-group" id="category-form-group">
     <label for="category-select">Category</label>
     <select class="category form-control" id="category-select" name="category">
@@ -26,6 +25,15 @@
     <select class="company form-control" id="company-select" name="company">
       {{# each companies }}
       <option value="{{ name }}" {{ isSelected name ../company }}>{{ name }}</option>
+      {{/each}}
+    </select>
+  </div>
+
+  <div class="form-group" id="companyType-form-group">
+    <label for="companyType-select">Type</label>
+    <select class="companyType form-control" id="companyType-select" name="companyType">
+      {{# each companyTypes }}
+      <option value="{{ this }}" {{ isSelected this ../companyType }}>{{ this }}</option>
       {{/each}}
     </select>
   </div>
