Tweaked imon-choropleth metadata

--- a/packages/imon-choropleth/client/info.html
+++ b/packages/imon-choropleth/client/info.html
@@ -1,5 +1,8 @@
 <template name="ImonChoroplethInfo">
-<p>We should really get info from the data source and display it here.</p>
+<p>The Internet Monitor Access Index captures Internet access from several angles, including Internet adoption, speed, price, and proxies for the ability of citizens to productively engage in online activity if given the opportunity: gender equality and education.</p>
+
+<p>More detailed data source information for each indicator can be found at Internet Monitor: Platform Data Sources (https://thenetmonitor.org/sources/platform-data).</p>
+
 <hr />
 {{> DefaultAttribution }}
 </template>
