--- a/packages/imon-choropleth/client/settings.html
+++ b/packages/imon-choropleth/client/settings.html
@@ -1,4 +1,4 @@
-<template name="ImonChoroplethSettings">
+<template name="IMonChoroplethSettings">
 
   {{# if Template.subscriptionsReady }}
 <div class="form-group">
