--- a/packages/imon-choropleth/client/widget.html
+++ b/packages/imon-choropleth/client/widget.html
@@ -1,4 +1,4 @@
-<template name="ImonChoroplethWidget">
+<template name="IMonChoroplethWidget">
   <h1 class="indicator_name"></h1>
   {{# unless Template.subscriptionsReady }}
     {{ widgetLoading }}
