--- a/packages/imon-choropleth/client/info.html
+++ b/packages/imon-choropleth/client/info.html
@@ -1,7 +1,6 @@
 <template name="ImonChoroplethInfo">
-<p>The Internet Monitor Access Index captures Internet access from several angles, including Internet adoption, speed, price, and proxies for the ability of citizens to productively engage in online activity if given the opportunity: gender equality and education.</p>
 
-<p>More detailed data source information for each indicator can be found at Internet Monitor: Platform Data Sources (https://thenetmonitor.org/sources/platform-data).</p>
+<p>The data backing this widget is part of the <a href="http://thenetmonitor.org/">Internet Monitor</a> Access Index. See <a href="https://thenetmonitor.org/sources/platform-data">this page</a> for more information about the data.</p>
 
 <hr />
 {{> DefaultAttribution }}
