--- a/packages/imon-barchart/client/settings.html
+++ b/packages/imon-barchart/client/settings.html
@@ -1,30 +1,56 @@
 <template name="IMonBarchartSettings">
 <div class="form-group">
-  <label for="chart-title">Chart title</label>
+  <label for="barchart-title">Chart title</label>
   <input placeholder="Bar Chart" class="form-control"
-         id="chart-title" name="chart-title" value="{{ title }}" />
+         id="barchart-title" name="chart-title" value="{{ title }}" />
 </div>
 
 {{# if Template.subscriptionsReady }}
 <div class="form-group">
-  <label for="y-select">Y-axis</label>
-  <select class="y-axis form-control" id="y-select" name="y-axis">
-  {{# each indicators }}
-  <option value="{{ id }}" {{ isSelected id ../y.indicator }}>{{ shortName }}</option>
-  {{/each}}
-  </select>
+  <label><input type="radio" name="mode" value="single" {{ isChecked 'single' mode }}>Single indicator (Y-axis), multiple countries.</label>
+  <label><input type="radio" name="mode" value="multi" {{ isChecked 'multi' mode }}>Multiple indicators (X-axis), single country.</label>
 </div>
+{{# if singleIndicator }}
+<div class="single-settings">
+  <div class="form-group">
+    <label for="y-select-single">Y-axis</label>
+    <select class="y-axis form-control" id="y-select-single" name="y-axis-single">
+    {{# each indicator }}
+    <option value="{{ id }}" {{ isSelected id ../y.single.indicator }}>{{ shortName }}</option>
+    {{/each}}
+    </select>
+  </div>
 
-<div class="form-group">
-  <label for="countries-select">Countries <small id="countries-select-number"></small></label>
-  <select class="form-control" id="countries-select" multiple>
-  {{# each country }}
-    <option class="country" value="{{ code }}" {{ isInArray code ../x.indicator }}>{{ name }}</option>
-  {{ /each }}
-  </select>
+  <div class="form-group">
+    <label for="countries-select">Countries <small id="countries-select-number"></small></label>
+    <select class="form-control" id="countries-select" multiple>
+    {{# each country }}
+      <option class="multi-option" value="{{ code }}" {{ isInArray code ../x.single.indicator }}>{{ name }}</option>
+    {{ /each }}
+    </select>
+  </div>
 </div>
-
-<button class="btn btn-primary save-settings">Save</button>
+{{else}}
+<div class="multi-settings">
+  <div class="form-group">
+    <label for="y-select-multi">Country</label>
+    <select class="y-axis form-control" id="y-select-multi" name="y-axis-multi">
+      {{# each country }}
+      <option value="{{ code }}" {{ isSelected code ../y.multi.indicator }}>{{ name }}</option>
+      {{ /each }}
+    </select>
+  </div>
+  <div class="form-group">
+  <label for="indicators-select">Indicators <small id="indicators-select-number"></small></label>
+    <select class="form-control" id="indicators-select" multiple>
+    {{# each indicator }}
+      <option class="multi-option" value="{{ id }}" {{ isInArray id ../x.multi.indicator }}>{{ shortName }}</option>
+    {{ /each }}
+    </select>
+  </div>
+</div>
+{{/if}}
+<button class="btn btn-primary save-barchart-settings">Save</button>
 {{ else }}
   {{ widgetLoading }}
 {{/if}}
