Info change for barchart widget

--- a/packages/imon-barchart/client/info.html
+++ b/packages/imon-barchart/client/info.html
@@ -1,10 +1,10 @@
 <template name="IMonBarchartInfo">
 <p>
-This widget displays a bar chart.
+This widget displays a bar chart to compare an indicator across several countries, or several indicators of one country. In case of the latter, the value shown per indicator is the country's rank in percentage, between the minimum (0%) and maximum (100%) values of that indicator across all recorded countries.
 </p>
 
 <p>
-If a country does not show up, then no data for it exists in the selected indicator.
+If a value does not show up, that means it does not exist for that country/indicator.
 </p>
 <hr />
 {{> DefaultAttribution }}
