Remove multi from settings and display source for single mode

--- a/packages/imon-barchart/client/info.html
+++ b/packages/imon-barchart/client/info.html
@@ -1,6 +1,6 @@
 <template name="IMonBarchartInfo">
 <p>
-This widget displays a bar chart to compare an indicator across several countries, or several indicators of one country. In case of the latter, the value shown per indicator is the country's rank in percentage, between the minimum (0%) and maximum (100%) values of that indicator across all recorded countries.
+This widget displays a bar chart to compare an indicator across several countries. 
 </p>
 
 <p>
