--- a/packages/imon-barchart/client/widget.html
+++ b/packages/imon-barchart/client/widget.html
@@ -1,4 +1,5 @@
 <template name="IMonBarchartWidget">
   <h1>{{ title }}</h1>
+  {{#if isSingle }}<div class="barchart-attr"><i class="fa fa-info-circle"></i> Source: {{{ dataSource }}}</div>{{/if}}
   <div class="barchart"></div>
 </template>
