Errors for unavailable data + update Source in upper right corner

--- a/packages/imon-barchart/client/info.html
+++ b/packages/imon-barchart/client/info.html
@@ -7,5 +7,5 @@ This widget displays a bar chart to compare an indicator across several countrie
 If a value does not show up, that means it does not exist for that country/indicator.
 </p>
 <hr />
-{{> DefaultAttribution }}
+<p>The data backing this widget is made available through Internet Monitor, which aggregates and analyzes data from a wide range of sources. Information on each of the individual indicators is available on our <a href="https://thenetmonitor.org/sources" target="_blank" >Data Sources</a> page.</p>
 </template>
