Sort results option to display bars in descending order

--- a/packages/imon-barchart/client/settings.html
+++ b/packages/imon-barchart/client/settings.html
@@ -49,6 +49,11 @@
     </select>
   </div>
 </div>
+<div class="form-group">
+  <div class="checkbox checkbox-success checkbox-big">
+    <input type="checkbox" class="sort-option" {{ isSorted }}><label>Sort Results</label>
+  </div>
+</div>
 
 <button class="btn btn-primary save-barchart-settings">Save</button>
 {{ else }}
