--- a/packages/imon-barchart/client/settings.html
+++ b/packages/imon-barchart/client/settings.html
@@ -51,7 +51,7 @@
 </div>
 <div class="form-group">
   <div class="checkbox checkbox-success checkbox-big">
-    <input type="checkbox" class="sort-option" {{ isSorted }}><label>Sort Results</label>
+    <input id="sort-option" type="checkbox" class="sort-option" {{ isSorted }}><label for="sort-option">Sort Results</label>
   </div>
 </div>
 
