Deselect all button

--- a/packages/imon-barchart/client/settings.html
+++ b/packages/imon-barchart/client/settings.html
@@ -30,6 +30,7 @@
         </div>
       {{ /each }}
     </div>
+    <button class="btn btn-default" id="deselect-countries"><i class="fa fa-times"></i> DESELECT ALL</button>
   </div>
 </div>
 
