UI refinement + number format choice

--- a/packages/imon-percent/client/info.html
+++ b/packages/imon-percent/client/info.html
@@ -3,5 +3,5 @@
 This widget shows percentage from a selected indicator.
 </p>
 <hr />
-{{> DefaultAttribution }}
+<p>The data backing this widget is made available through Internet Monitor, which aggregates and analyzes data from a wide range of sources. Information on each of the individual indicators is available on our <a href="https://thenetmonitor.org/sources" target="_blank" >Data Sources</a> page.</p>
 </template>
