Responsive icon/value sizes + regions as a category in the choices + general UI adjustments

--- a/packages/imon-percent/client/widget.html
+++ b/packages/imon-percent/client/widget.html
@@ -4,10 +4,10 @@
   <h2></h2>
 </div>
 <div class="row">
-  <div class="col-xs-9">
+  <div class="col-xs-8">
     <div class="online-users"></div>
   </div>
-  <div class="col-xs-3 text-center">
+  <div class="col-xs-4 text-center value-container">
     <div class="indicator-value"></div>
   </div>
 </div>
