--- a/packages/imon-percent/client/settings.html
+++ b/packages/imon-percent/client/settings.html
@@ -4,9 +4,16 @@
 <div class="form-group">
   <label for="country-select">Country</label>
   <select class="country-select form-control" id="country-select">
+    <optgroup label="Countries">
     {{# each countries }}
       <option value="{{ code }}" {{ isSelected code ../country }}>{{ name }}</option>
     {{/ each }}
+    </optgroup>
+    <optgroup label="Regions">
+    {{# each regions }}
+      <option value="{{ code }}" {{ isSelected code ../country }}>{{ name }}</option>
+    {{/ each }}
+    </optgroup>
   </select>
 </div>
 <div class="form-group">
