Fix first render bug

--- a/packages/imon-percent/client/widget.html
+++ b/packages/imon-percent/client/widget.html
@@ -3,9 +3,11 @@
   <h1></h1>
   <h2></h2>
 </div>
-<div class="row">
+<div class="row nodeRow">
   <div class="col-xs-8">
-    <div class="online-users"></div>
+  	<div class="users-container">
+    	<div class="online-users"></div>
+    </div>
   </div>
   <div class="col-xs-4 text-center value-container">
     <div class="indicator-value"></div>
