--- a/packages/imon-percent/client/widget.html
+++ b/packages/imon-percent/client/widget.html
@@ -9,7 +9,7 @@
     	<div class="online-users"></div>
     </div>
   </div>
-  <div class="col-xs-4 text-center value-container">
+  <div class="col-xs-4 text-left value-container">
     <div class="indicator-value"></div>
   </div>
 </div>
