--- a/packages/imon-percent/client/settings.html
+++ b/packages/imon-percent/client/settings.html
@@ -25,6 +25,14 @@
   </select>
 </div>
 <div class="form-group">
+  <label for="color-select">Unit color</label>
+  <select class="form-control color-select" id="color-select">
+    {{# each colors }}
+      <option value="{{ code }}" class="color-select-option" {{ isSelected code ../color }}>{{ name }}</option>
+    {{/ each }}
+  </select>
+</div>
+<div class="form-group">
   <label for="base-select">Total number of units</label>
   <select class="form-control base-select" id="base-select">
   {{# each temp.availableBases }}
