Select saved base in settings

--- a/packages/imon-percent/client/settings.html
+++ b/packages/imon-percent/client/settings.html
@@ -36,7 +36,7 @@
   <label for="base-select">Total number of units</label>
   <select class="form-control base-select" id="base-select">
   {{# each temp.availableBases }}
-    <option value="{{ this }}">{{ this }}</option>
+    <option value="{{ this }}" {{ isSelected this ../base }}>{{ this }}</option>
   {{ else }}
     <option value="100" disabled>Loading...</option>
   {{/ each }}
