--- a/packages/imon-valuetrend/client/settings.html
+++ b/packages/imon-valuetrend/client/settings.html
@@ -16,6 +16,14 @@
   {{/each}}
   </select>
 </div>
+<div class="form-group">
+	<label for="color-select">Color</label>
+	<select class="color form-control" id="color-select" name="color">
+	{{# each colors }}
+		<option value="{{ code }}" {{ isSelected code ../color }}>{{ name }}</option>
+	{{/each}}
+	</select>
+</div>
 
 <button class="btn btn-primary save-settings">Save</button>
 {{ else }}
