Get all dev country data + tweaks to dev data pub/sub and valuetrend UI

--- a/packages/imon-valuetrend/client/widget.html
+++ b/packages/imon-valuetrend/client/widget.html
@@ -15,10 +15,10 @@
     {{/if}}
   {{/if}}
   </div>
-  <div class="trend-line col-xs-5">
+  <div class="trend-line col-xs-5  text-center">
     <div class="epoch chart" id="chart"></div>
     {{# if Template.subscriptionsReady }}
-    <div class="trend-label text-center">{{ trendLabel }}</div>
+    <div class="trend-label">{{ trendLabel }}</div>
     {{/if}}
   </div>
 </div>
