--- a/packages/imon-percent/client/settings.html
+++ b/packages/imon-percent/client/settings.html
@@ -4,23 +4,16 @@
 <div class="form-group">
   <label for="country-select">Country</label>
   <select class="country-select form-control" id="country-select">
-    <optgroup label="Countries">
     {{# each countries }}
       <option value="{{ code }}" {{ isSelected code ../country }}>{{ name }}</option>
     {{/ each }}
-    </optgroup>
-    <optgroup label="Regions">
-    {{# each regions }}
-      <option value="{{ code }}" {{ isSelected code ../country }}>{{ name }}</option>
-    {{/ each }}
-    </optgroup>
   </select>
 </div>
 <div class="form-group">
   <label for="indicator-select">Indicator</label>
   <select class="form-control indicator-select" id="indicator-select">
     {{# each indicators }}
-      <option value="{{ id }}" {{ isSelected id ../indicatorId }}>{{ removePerc shortName }}</option>
+      <option value="{{ adminName }}" {{ isSelected adminName ../indicatorName }}>{{ removePerc shortName }}</option>
     {{/ each }}
   </select>
 </div>
