--- a/packages/imon-speedometer/client/settings.html
+++ b/packages/imon-speedometer/client/settings.html
@@ -5,24 +5,16 @@
   <label for="indicator-select">Indicator</label>
   <select class="indicator form-control" id="indicator-select" name="indicator">
     {{# each indicators }}
-      <option value="{{ id }}" {{ isSelected id ../indicatorId }}>{{ trim name }}</option>
+      <option value="{{ adminName }}" {{ isSelected adminName ../indicatorName }}>{{ trim name }}</option>
     {{/ each }}
   </select>
 </div>
 <div class="form-group">
   <label for="country-select">Country</label>
   <select class="country form-control" id="country-select" name="country">
-      <optgroup label="Countries">
         {{# each countries }}
           <option value="{{ code }}" {{ isSelected code ../country }}>{{ name }}</option>
         {{/each}}
-      </optgroup>
-
-      <optgroup label="Regions">
-        {{# each regions }}
-          <option value="{{ code }}" {{ isSelected code ../country }}>{{ name }}</option>
-        {{/each}}
-      </optgroup>
   </select>
 </div>
 <div class="form-group">
