Notice message for access-index

--- a/packages/access-index/client/widget.html
+++ b/packages/access-index/client/widget.html
@@ -29,4 +29,9 @@
 {{ else }}
   {{ widgetLoading }}
 {{/if}}
+<div class="row">
+  <div class="notice col-xs-12 text-center">
+    <i class="fa fa-warning"></i> <span title="Widget will be retired on Jan 1st, 2017">Data no longer updated since 2014</span>
+  </div>
+</div>
 </template>
