Add single-country to settings, fix memory/CPU usage problem with d3.compose, add limit of 10 to multiple selection boxes

--- a/packages/imon-timeline/client/settings.html
+++ b/packages/imon-timeline/client/settings.html
@@ -17,15 +17,38 @@
   </div>
 
   <div class="form-group">
-    <label>Countries <small class="countries-select-number"></small></label>
-    <div class="countries-select-box">
+    <label>Countries <small class="countries-select-number select-number"></small></label>
+    <div class="countries-select-box select-box">
       {{# each countries }}
         <div class="checkbox checkbox-success checkbox-small">
-          <input type="checkbox" id="countries-option-{{ code }}" class="singleInd-countries-option" value="{{ code }}" {{ isInArray code ../country }}><label for="countries-option-{{ code }}">{{ name }}</label>
+          <input type="checkbox" id="countries-option-{{ code }}" class="singleInd-countries-option select-box-option" value="{{ code }}" {{ isInArray code ../country }}><label for="countries-option-{{ code }}">{{ name }}</label>
         </div>
       {{ /each }}
     </div>
-    <button class="btn btn-default" id="deselect-countries"><i class="fa fa-times"></i> DESELECT ALL</button>
+    <button class="btn btn-default deselect-btn" id="deselect-countries"><i class="fa fa-times"></i> DESELECT ALL</button>
+  </div>
+</div>
+
+<div class="multi-settings" style={{# if singleIndicator }}display:none;{{/if}}>
+  <div class="form-group">
+    <label for="singleCntry-country-select">Country</label>
+    <select class="singleCntry-country form-control" id="singleCntry-country-select">
+    {{# each countries }}
+    <option value="{{ code }}" {{ isSelected code ../country }}>{{ name }}</option>
+    {{/each}}
+    </select>
+  </div>
+
+  <div class="form-group">
+    <label>Indicators <small class="indicators-select-number select-number"></small></label>
+    <div class="indicators-select-box select-box">
+      {{# each indicators }}
+        <div class="checkbox checkbox-success checkbox-small">
+          <input type="checkbox" id="indicators-option-{{ adminName }}" class="singleCntry-indicators-option select-box-option" value="{{ adminName }}" {{ isInArray adminName ../indicatorName }}><label for="indicators-option-{{ adminName }}">{{ shortName }}</label>
+        </div>
+      {{ /each }}
+    </div>
+    <button class="btn btn-default deselect-btn" id="deselect-indicators"><i class="fa fa-times"></i> DESELECT ALL</button>
   </div>
 </div>
 
