--- a/packages/imon-timeline/client/widget.html
+++ b/packages/imon-timeline/client/widget.html
@@ -1,12 +1,14 @@
 <template name="IMonTimelineWidget">
 {{# if Template.subscriptionsReady }}
 <div class="title row">
-  <div class="col-xs-12"><h1>{{ indicator }}</h1></div>
+  <div class="col-xs-12"><h1>{{ title }}</h1></div>
 </div>
 {{ else }}
 {{ widgetLoading }}
-{{/if}}
+{{/ if }}
 <div class="timeline-error"></div>
 <div class="current-data row">
+<div class="chart-single col-xs-12"></div>
+<div class="chart-multi col-xs-12"></div>
 </div>
 </template>
