--- a/packages/imon-timeline/client/widget.html
+++ b/packages/imon-timeline/client/widget.html
@@ -9,6 +9,6 @@
 <div class="timeline-error"></div>
 <div class="current-data row">
 <div class="chart-single col-xs-12"></div>
-<div class="chart-multi col-xs-12"></div>
+<div class="chart-multi"></div>
 </div>
 </template>
