--- a/packages/imon-valuetrend/client/info.html
+++ b/packages/imon-valuetrend/client/info.html
@@ -1,6 +1,6 @@
 <template name="IMonValuetrendInfo">
 <p>
-  This widget displays the value of an indicator for a chosen country and its trend over time.s 
+  This widget displays the value of an indicator for a chosen country and its trend over time. 
 </p>
 <hr />
 <p>The data backing this widget is made available through Internet Monitor, which aggregates and analyzes data from a wide range of sources. Information on each of the individual indicators is available on our <a href="https://thenetmonitor.org/sources" target="_blank" >Data Sources</a> page.</p>
