--- a/packages/imon-bubblechart/client/widget.html
+++ b/packages/imon-bubblechart/client/widget.html
@@ -1,5 +1,7 @@
 <template name="IMonBubbleChartWidget">
   <h1>{{ title }}</h1>
+  <h2 class="bubblechart-year"></h2>
+  <h3 class="bubblechart-button"></h3>
   <div class="row">
   {{# unless Template.subscriptionsReady }}
   <div class="col-xs-12">
@@ -8,6 +10,8 @@
   {{ else }}
   	<div class="z-index col-xs-12">{{ bubbleSize }}</div>
   {{/unless}}
+  <div class="bubblechart-loading col-xs-12"></div>
+  <div class="bubblechart-error"></div>
   <div class="bubble-chart col-xs-12"></div>
   </div>
 </template>
