UI improvements for initial bubble chart

--- a/packages/imon-bubblechart/client/widget.html
+++ b/packages/imon-bubblechart/client/widget.html
@@ -1,7 +1,7 @@
 <template name="IMonBubbleChartWidget">
   <h1>{{ title }}</h1>
+  <div class="bubblechart-button"></div>
   <h2 class="bubblechart-year"></h2>
-  <h3 class="bubblechart-button"></h3>
   <div class="row">
   {{# unless Template.subscriptionsReady }}
   <div class="col-xs-12">
