--- a/packages/imon-bubblechart/client/widget.html
+++ b/packages/imon-bubblechart/client/widget.html
@@ -1,6 +1,9 @@
 <template name="IMonBubbleChartWidget">
   <h1>{{ title }}</h1>
-  <div class="bubblechart-button"></div>
+  <div class="bubblechart-button">
+    <button class="animation-button" id="play-button"><i class="fa fa-play-circle"></i></button>
+    <button class="animation-button" id="pause-button"><i class="fa fa-pause-circle"></i></button>
+  </div>
   <h2 class="bubblechart-year"></h2>
   <div class="row">
   {{# unless Template.subscriptionsReady }}
