Set defaults, hammer out details, add ability to select/highlight countries

--- a/packages/imon-bubblechart/client/settings.html
+++ b/packages/imon-bubblechart/client/settings.html
@@ -66,6 +66,9 @@
   </select>
 </div>
 
+<div class="tip"><i class="fa fa-lightbulb-o"></i> Highlight a country by clicking its bubble.</div>
+
+
 <button class="btn btn-primary save-settings">Save</button>
 {{ else }}
   {{ widgetLoading }}
