Changes to text + icons

--- a/packages/imon-bubblechart/client/info.html
+++ b/packages/imon-bubblechart/client/info.html
@@ -1,6 +1,6 @@
 <template name="IMonBubbleChartInfo">
 <p>
-This widget displays an animated bubble chart displaying each country as a bubble of a chosen size/color and its position relevant to two indicators (X and Y axes) over time.
+This widget displays an animated bubble chart. Each country's appearance on the chart is determined by three indicators: one affecting size, and one each for the X and Y axes. The chart is animated over time.
 </p>
 <hr />
 <p>The data backing this widget is made available through Internet Monitor, which aggregates and analyzes data from a wide range of sources. Information on each of the individual indicators is available on our <a href="https://thenetmonitor.org/sources" target="_blank" >Data Sources</a> page.</p>
