--- a/packages/imon-bubblechart/client/widget.html
+++ b/packages/imon-bubblechart/client/widget.html
@@ -1,10 +1,10 @@
 <template name="IMonBubbleChartWidget">
   <h1>{{ title }}</h1>
   <div class="bubblechart-button">
-    <button class="animation-button" id="step-backward-button"><i class="fa fa-step-backward"></i></button>
+    <button class="animation-button" id="step-backward-button"><i class="fa fa-backward"></i></button>
     <button class="animation-button" id="play-button"><i class="fa fa-play-circle"></i></button>
     <button class="animation-button" id="pause-button"><i class="fa fa-pause-circle"></i></button>
-    <button class="animation-button" id="step-forward-button"><i class="fa fa-step-forward"></i></button>
+    <button class="animation-button" id="step-forward-button"><i class="fa fa-forward"></i></button>
   </div>
   <h2 class="bubblechart-year"></h2>
   <div class="row">
