Select year (or latest available data) for barchart

--- a/packages/imon-barchart/client/widget.html
+++ b/packages/imon-barchart/client/widget.html
@@ -1,5 +1,8 @@
 <template name="IMonBarchartWidget">
 <div class="barchart-error"></div>
   <h1>{{ title }}</h1>
+  {{#if byYear}}
+  	<h2>{{ chosenYear }}</h2>
+  {{/if}}
 <div class="barchart"></div>
 </template>
