--- a/packages/imon-barchart/client/settings.html
+++ b/packages/imon-barchart/client/settings.html
@@ -22,6 +22,16 @@
   </div>
 
   <div class="form-group">
+    <label for="year-select-single">Year</label>
+    <select class="year form-control" id="year-select-single" name="year-select-single">
+    <option value="none" {{ isSelected byYear false }}>Latest available data</option>
+    {{# each year }}
+    <option value="{{this}}" {{ isSelected this ../chosenYear }}>{{this}}</option>
+    {{/each}}
+    </select>
+  </div>
+
+  <div class="form-group">
     <label>Countries <small class="countries-select-number"></small></label>
     <div class="countries-select-box">
       {{# each country }}
