--- a/packages/imon-barchart/client/settings.html
+++ b/packages/imon-barchart/client/settings.html
@@ -26,7 +26,7 @@
     <select class="year form-control" id="year-select-single" name="year-select-single">
     <option value="none" {{ isSelected byYear false }}>Latest available data</option>
     {{# each year }}
-    <option value="{{this}}" {{ isSelected this ../chosenYear }}>{{this}}</option>
+    <option value="{{this}}" {{ isSelected this chosenYear }}>{{this}}</option>
     {{/each}}
     </select>
   </div>
