Select year in percent

--- a/packages/imon-percent/client/widget.html
+++ b/packages/imon-percent/client/widget.html
@@ -1,7 +1,7 @@
 <template name="IMonPercentWidget">
 <div class="percent-title">
   <h1></h1>
-  <h2></h2>
+  <h2></h2>{{#if byYear}}<h3>{{ chosenYear }}</h3>{{/if}}
 </div>
 <div class="row nodeRow">
   <div class="col-xs-8">
