--- a/packages/imon-scatter/client/settings.html
+++ b/packages/imon-scatter/client/settings.html
@@ -57,6 +57,13 @@
 </div>
 
 <div class="form-group">
+    <label for="year-select-single">Year</label>
+    <select class="year form-control" id="year-select-single" name="year-select-single">
+    <option value="none" {{ isSelected byYear false }}>Latest available data</option>
+    {{# each year }}
+    <option value="{{this}}" {{ isSelected this ../chosenYear }}>{{this}}</option>
+    {{/each}}
+    </select>
 </div>
 
 <button class="btn btn-primary save-settings">Save</button>
