--- a/packages/imon-scatter/client/widget.html
+++ b/packages/imon-scatter/client/widget.html
@@ -1,5 +1,6 @@
 <template name="IMonScatterWidget">
   <h1>{{ title }}</h1>
+  {{#if byYear}}<h2>{{chosenYear}}</h2>{{/if}}
   {{# unless Template.subscriptionsReady }}
   	{{widgetLoading}}
   {{/unless}}
