--- a/packages/imon-speedometer/client/widget.html
+++ b/packages/imon-speedometer/client/widget.html
@@ -2,6 +2,7 @@
 <div class="title">
 	<h1></h1>
 	<h2></h2>
+	{{#if byYear}}<h3>{{chosenYear}}</h3>{{/if}}
 </div>
 <div class="gauge"></div>
 </template>
