brand new revamp

--- a/packages/google-trends-map/client/settings.html
+++ b/packages/google-trends-map/client/settings.html
@@ -1,4 +1,4 @@
-<template name="GoogleTrendsSettings">
+<template name="GoogleTrendsMapSettings">
   <div class="form-group">
     <label for="keyword">Search Term</label>
     <input id="keyword" class="form-control" type="url"
