--- a/packages/connection-speed/client/widget.html
+++ b/packages/connection-speed/client/widget.html
@@ -1,5 +1,6 @@
 <template name="ConnectionSpeedWidget">
 <h1>Connection Speed</h1>
 <h2>{{ country.name }}</h2>
+{{#if byYear}}<h3>{{chosenYear}}</h3>{{/if}}
 <div class="gauge"></div>
 </template>
