--- a/packages/connection-speed/client/settings.html
+++ b/packages/connection-speed/client/settings.html
@@ -4,7 +4,17 @@
   <label for="country-select">Country</label>
   <select class="country form-control" id="country-select" name="country">
         {{# each countries }}
-        {{> ConnectionSpeedOption }}
+	  	<option value="{{ code }}" {{ isSelected code ../country.code }}>{{ name }}</option>
+        {{/each}}
+  </select>
+</div>
+
+<div class="form-group">
+  <label for="year-select">Year</label>
+  <select class="year form-control" id="year-select" name="year">
+  		<option value="none" {{ isSelected byYear false }}>Latest available data</option>
+        {{# each year }}
+	  	<option value="{{ this }}" {{ isSelected this ../chosenYear }}>{{ this }}</option>
         {{/each}}
   </select>
 </div>
@@ -13,8 +23,4 @@
 {{ else }}
   {{ widgetLoading }}
 {{/if}}
-</template>
-
-<template name="ConnectionSpeedOption">
-  <option value="{{ code }}" {{ isSelected code ../country.code }}>{{ name }}</option>
 </template>
