--- a/packages/percent-online/client/settings.html
+++ b/packages/percent-online/client/settings.html
@@ -9,6 +9,16 @@
   </select>
 </div>
 
+<div class="form-group">
+  <label for="year-select">Year</label>
+  <select class="year form-control" id="year-select" name="year">
+  		<option value="none" {{ isSelected byYear false }}>Latest available data</option>
+        {{# each year }}
+ 		 <option value="{{ this }}" {{ isSelected this ../chosenYear }}>{{ this }}</option>
+        {{/each}}
+  </select>
+</div>
+
 <button class="btn btn-primary save-settings">Save</button>
 {{ else }}
   {{ widgetLoading }}
