--- a/packages/widget/client/widget.html
+++ b/packages/widget/client/widget.html
@@ -14,7 +14,7 @@
     </div>
     {{/if}}
 
-    <div class="title-bar" style="height: {{ titleBar.height }}px;">
+    <div class="title-bar">
       {{# if package.metadata.widget.category }}
       <span class="widget-category-label" title="{{ category.name }}"
                                           style="{{ categoryStyle }}">
