make widget work

--- a/packages/ac-theme-in-country/client/widget.html
+++ b/packages/ac-theme-in-country/client/widget.html
@@ -1,5 +1,5 @@
 <template name="ThemeInCountryWidget">
   <div>
-    {{> React props component=BarCollection }}
+    {{> React component=BarCollectionContainer countryCode=country.code }}
   </div>
 </template>
