Fix visibility issue in Bytes Delivered map

--- a/packages/akamaitraffic2/client/widget.html
+++ b/packages/akamaitraffic2/client/widget.html
@@ -1,6 +1,6 @@
 <template name="AkamaiTraffic2Widget">
   <h1>Bytes Delivered</h1>
-  <p>Percent above average</p>
+  <p>Percent above average.</p>
   {{# unless Template.subscriptionsReady }}
     {{ widgetLoading }}
   {{/unless}}
