--- a/packages/imon-country-profile/client/widget.html
+++ b/packages/imon-country-profile/client/widget.html
@@ -3,10 +3,10 @@
   <h1>Country Profile</h1>
   <h2>{{ country.name }}</h2>
   <div class="row">
-    <div class="col-sm-5">
+    <div class="col-xs-5">
       <img class="country-thumb img-thumbnail" src="{{ imageUrl country.code }}" />
     </div>
-    <div class="col-sm-7">
+    <div class="col-xs-7">
       <dl class="dl-horizontal">
         <dt>Population</dt>
         <dd>{{ population }}</dd>
