option to remove country name from widgets - #14404

--- a/packages/ac-theme-in-country/client/widget.html
+++ b/packages/ac-theme-in-country/client/widget.html
@@ -1,5 +1,5 @@
 <template name="ThemeInCountryWidget">
   <div>
-    {{> React component=BarCollectionContainer countryCode=country.code }}
+    {{> React component=BarCollectionContainer countryCode=country.code showCountry=widget.showCountry}}
   </div>
 </template>
