--- a/packages/global-voices/client/widget.html
+++ b/packages/global-voices/client/widget.html
@@ -1,7 +1,7 @@
 <template name="GlobalVoicesWidget">
   <h1>Global Voices</h1>
   {{# if Template.subscriptionsReady }}
-  <h2>{{ countryName }}</h2>
+  {{#if widget.showCountry}}<h2>{{ countryName }}</h2>{{/if}}
   <ul class="feed-items list-unstyled">
     {{# each feedItems }}
       {{> GVItem }}
