--- a/packages/gsma-4g/client/widget.html
+++ b/packages/gsma-4g/client/widget.html
@@ -1,6 +1,6 @@
 <template name="GSMA4GWidget">
   <h1>4G Connections</h1>
-<h2>{{ country.name }}</h2>
+  {{#if widget.showCountry }}<h2>{{ country.name }}</h2>{{/if}}
 {{# unless Template.subscriptionsReady }}
   {{ widgetLoading }}
 {{/unless}}
