--- a/packages/percent-online/client/widget.html
+++ b/packages/percent-online/client/widget.html
@@ -1,6 +1,6 @@
 <template name="PercentOnlineWidget">
   <h1>Percent Online</h1>
-  <h2>{{ country.name }}</h2>
+  {{#if widget.showCountry}}<h2>{{ country.name }}</h2>{{/if}}
   {{#if byYear}}<h3>{{chosenYear}}</h3>{{/if}}
 {{# if Template.subscriptionsReady }}
   <span class="indicator-value">{{ indicatorValue }}</span>
