update rdr text

--- a/packages/ranking-digital-rights/client/info.html
+++ b/packages/ranking-digital-rights/client/info.html
@@ -1,18 +1,18 @@
 <template name="RDRInfo">
 <p>
-This widget displays data from the 2015 Corporate Accountability Index, which
-ranks 16 of the world’s most powerful Internet and telecommunications companies
+This widget displays data from the 2017 Corporate Accountability Index, which
+ranks 22 of the world’s most powerful Internet and telecommunications companies
 on their disclosed commitments, policies, and practices that affect users’
 freedom of expression and privacy.
 </p>
 <p>
-The widget allows you to compare scores for companies that offer mobile
+The widget allows you to compare scores for companies that offer cloud services, mobile
 services, fixed broadband, social networking &amp; blog services, instant messaging
-&amp; calls, search, and mail services. 
+&amp; calls, search, video &amp; photo sharing, and mail services. 
 </p>
 <p>
 More on the methodology powering the index is online at <a
-  href="https://rankingdigitalrights.org/index2015/methodology/">Ranking
+  href="https://rankingdigitalrights.org/index2017/methodology/">Ranking
   Digital Rights</a>.
 </p>
 <hr />
