--- a/packages/user-content/client/widget.html
+++ b/packages/user-content/client/widget.html
@@ -1,7 +1,7 @@
 <template name="UserContentWidget">
 <div class="user-content-wrapper" {{ style }}>
   {{# if text }}
-  <p class="user-content-text">{{ text }}</p>
+    <p class="user-content-text" {{ textStyle }}>{{ text }}</p>
   {{/if}}
 </div>
 </template>
